--- a/assignment1/Lewis-Assignment1.html
+++ b/assignment1/Lewis-Assignment1.html
@@ -16,7 +16,7 @@
 
         <p><b>Christopher Lewis</b> is a student at NCA&T.</p>
 
-        <p><b>Melinda Lewis</b> is my lovely wife and we do not argue cause shes always right.</p>
+        <p><b>Melinda Lewis</b> is my lovely wife and we do not argue because shes always right.</p>
 
     </main>
 
