--- a/assignment1/Lewis-Assignment1.html
+++ b/assignment1/Lewis-Assignment1.html
@@ -14,9 +14,9 @@
     <main>
         <h2>Information:</h2>
 
-        <p><b>Christopher Lewis</b> is a student at NCA&T.</p>
+        <p><b>Christopher Lewis</b> is a student at NCA&T. He is super excited to be learning HTML.</p>
 
-        <p><b>Melinda Lewis</b> is my lovely wife and we do not argue because shes always right.</p>
+        <p><b>Melinda Lewis</b> is CHristopher's lovely wife and we do not argue because shes always right. We share two kids together.</p>
 
     </main>
 
