--- a/project2/MeetTheTrainer.html
+++ b/project2/MeetTheTrainer.html
@@ -38,7 +38,7 @@
         <strong>Teaching Style:</strong> Jim brings an electrifying energy to his classes. His motivating approach and engaging playlists<br> creates an atmosphere that pushes participants to challenge themselves while having fun. He emphasizes form and technique<br> ensuring that everyone gets the most out of their workout.</P><br><br>
 
      <h3>JAMES</h3>
-     <img src="images/IMG_5695.Jpg" alt="Spin" width="400" height="400">
+     <img src="images/IMG_5695.JPG" alt="Spin" width="400" height="400">
 
      <p><strong>Certifications:</strong> Certified Spinning Instructor, Personal Trainer<br><br>
 
@@ -47,7 +47,7 @@
         <strong>Teaching Style:</strong> James brings an electrifying energy to his classes. His motivating approach and engaging playlists create an atmosphere <br>that pushes participants to challenge themselves while having fun. He emphasizes form and technique<br> ensuring that everyone gets the most out of their workout.
      </p><br><br>
      <h3>PAUL</h3>
-     <img src="images/IMG_5696.Jpg" alt="Spin" width="400" height="400">
+     <img src="images/IMG_5696.JPG" alt="Spin" width="400" height="400">
 
      <p><strong>Certifications:</strong> Certified Spinning Instructor, NASM Certified Personal Trainer<br><br>
 
@@ -56,7 +56,7 @@
         <strong>Teaching Style:</strong> Known for his motivating presence, Paul creates a welcoming atmosphere in his classes. He focuses on pushing limits while<br> ensuring every rider feels supported. His carefully curated playlists keep the energy high and the workouts engaging!
      </p><br><br>
      <h3>TYRONE</h3>
-     <img src="images/IMG_5693.Jpg" alt="Spin" width="400" height="400">
+     <img src="images/IMG_5693.JPG" alt="Spin" width="400" height="400">
     <p><strong>Certifications:</strong> Certified Spinning Instructor, Group Fitness Instructor<br><br>
 
         <strong>About Tyrone:</strong> Tyrone has been passionate about fitness for over 6 years, finding his niche in spinning after trying it out at a local gym. <br>His enthusiasm for helping others achieve their fitness goals is what drives him every day.<br><br>
