--- a/groupProject/resources.html
+++ b/groupProject/resources.html
@@ -72,10 +72,10 @@
        
         <br>
         <!-- Validation Buttons -->
-        <a href="https://validator.w3.org/check?uri=referer" style="text-decoration: none;">
+        <a href="https://validator.w3.org/check?uri=referer" referrerpolicy="unsafe-url">
             Validate HTML
         </a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer" style="text-decoration: none;">
+        <a href="https://jigsaw.w3.org/css-validator/check/referer" referrerpolicy="unsafe-url">
             Validate CSS
         </a>
     </footer>
